[package]
name = "rusty-pin"
version = "0.5.4"
authors = ["Hamid Ghadyani <hamid@hamid.cc>"]
description = """
Pinboard's API in pure Rust
"""
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
url = "1.7"
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.9"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url_serde = "0.2.0"
rmp-serde = "0.15"

# regex = "1.5.2"
fuzzy-matcher = "0.3.7"

failure = "0.1"
failure_derive = "0.1"
log = "0.4"
env_logger = "0.9"
dirs = "3.0"

clippy = { version = "*", optional = true }

[dev-dependencies]
mockito = "0.30"
tempfile = "^3.0"

[features]
dev = ["clippy"]
bench = []

[profile.release]
lto = true
