[package]
name = "rusty-pin"
version = "0.5.5"
authors = ["Hamid Ghadyani <hamid@hamid.cc>"]
description = """
Pinboard's API in pure Rust
"""
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
url = "1.7"
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.9"
unicode-normalization = "0.1"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url_serde = "0.2.0"
rmp-serde = "1.1"

fuzzy-matcher = "0.3.7"

thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
dirs = "4.0"

clippy = { version = "*", optional = true }

[dev-dependencies]
mockito = "0.31"
tempfile = "^3.0"

[features]
dev = ["clippy"]
bench = []

[profile.release]
lto = true
